# 2dbat

./: .configure.ac.swp  2dbat.DOCKER.HOWTO  AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  config.status.lineno  configure  configure.ac  setup_2dbat.sh
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
src/lib/: 2dbat.2dmaps.c  2dbat.2dmaps.h  2dbat.cfitsio.h  2dbat.einastofit.c  2dbat.einastofit.h  2dbat.ellipsefit.c  2dbat.ellipsefit.h  2dbat.etc.c  2dbat.etc.h  2dbat.gfit.c  2dbat.gfit.h  2dbat.global_params.h  2dbat.gsl.c  2dbat.gsl.h  2dbat.main.h  2dbat.memory.c  2dbat.memory.h  2dbat.mpi.c  2dbat.mpi.h  2dbat.mpi_datatype.h  2dbat.multinest.c  2dbat.multinest.h  2dbat.priors.c  2dbat.priors.h  2dbat.sort.c  2dbat.sort.h  2dbat.trfit.c  2dbat.trfit.h  Makefile  Makefile.am  Makefile.in
src/lib/.deps/: 2dbat.2dmaps.Po  2dbat.einastofit.Po  2dbat.ellipsefit.Po  2dbat.etc.Po  2dbat.gfit.Po  2dbat.gsl.Po  2dbat.memory.Po  2dbat.mpi.Po  2dbat.multinest.Po  2dbat.priors.Po  2dbat.sort.Po  2dbat.trfit.Po
